@@ -2,6 +2,9 @@ package org.ethelred.minecraft.events;
 
 import io.avaje.inject.test.InjectTest;
 import jakarta.inject.Inject;
+import org.ethelred.minecraft.events.model.Dimension;
+import org.ethelred.minecraft.events.model.PlayerUpdate;
+import org.ethelred.minecraft.events.model.Vector3;
 import org.jdbi.v3.core.Jdbi;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,16 +29,20 @@ public class EventDAOTest {
         var success = eventDAO.insertLocation("My World", new PlayerUpdate("Steve", "ignore", Dimension.overworld, new Vector3(1, 2,3)));
         assertThat(success).isTrue();
 
-        var locations = eventDAO.findLatestLocations();
+        var locations = eventDAO.findLatestLocationRows();
         assertThat(locations).hasSize(1)
                 .first()
                 .extracting(EventDAO.LocationDTO::player).isEqualTo("Steve");
 
         success = eventDAO.insertLocation("My World", new PlayerUpdate("Alex", "ignore", Dimension.overworld, new Vector3(7, -1.3,56)));
         assertThat(success).isTrue();
-        locations = eventDAO.findLatestLocations();
+        locations = eventDAO.findLatestLocationRows();
         assertThat(locations).hasSize(2)
                 .extracting(EventDAO.LocationDTO::player).contains("Alex", "Steve");
-        assertThat(locations.get(0).dimension()).isEqualTo(Dimension.overworld);
+        assertThat(locations.getFirst().dimension()).isEqualTo(Dimension.overworld);
+
+        var worlds = eventDAO.findLatestLocations();
+        assertThat(worlds).hasSize(1);
+        assertThat(worlds.getFirst().players()).hasSize(2);
     }
 }
